fix page alignment.

--- a/survival.css
+++ b/survival.css
@@ -3,6 +3,8 @@
 html {
       height: 100%;
       background-color: black;
+      text-align: center;
+      object-position: center;
     }
     body {
        width: 800px;
